fix: hcaptcha on mobile screens
* Added props to HCaptcha components
* Added scss to align center Hcaptcha component on mobile screens

--- a/components/AddContentCreatorForm/addContentCreatorForm.module.scss
+++ b/components/AddContentCreatorForm/addContentCreatorForm.module.scss
@@ -51,4 +51,7 @@
     justify-content: space-between;
     align-items: flex-end;
   }
+  & > [id*='hcaptcha'] {
+    align-self: center;
+  }
 }
